--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         run : ls -la
         
       - name: Clone my repo
-        uses: action/checkout@v1
+        uses: actions/checkout@v1
       
       - name: list folder after cloning git repo
         run : ls -la
