--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         run : |
           echo "Hello msg 1"
           echo "Hello msg 2"
-          "Printing Global Env Varialbe ${{env.DEPLOY_PACKAGE_NAME}}"
+          echo "Printing Global Env Varialbe ${{env.DEPLOY_PACKAGE_NAME}}"
 
       - name: list current folder
         run : ls -la
@@ -47,5 +47,5 @@ jobs:
         run : ls -la
 
       - name: Printing Global env variable
-        run : "${{env.DEPLOY_PACKAGE_NAME}}"
+        run : echo "${{env.DEPLOY_PACKAGE_NAME}}"
     
