--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -1,66 +1,139 @@
-# ----------------------------
-# Learning git Action
-# ----------------------------
+# # ----------------------------
+# # Deploying on aws- demo git Action
+# # ----------------------------
 
-# ----------------------------
-# Learning git Action
-# ----------------------------
-
-name: My-GitHub-Action-tutorial
+name: CI-CD_Pipleine-Demo-Deploy
 env : 
-  APPLICATION_NAME : "Drag_And_Drop_App"
-  DEPLOY_PACKAGE_NAME: "dragDrop-app-ver-${{github.sha}}"
-  
-on:
+  EB_PACKAGE_S3_BUCKET_NAME : "demo-deploy"
+  EB_APPLICATION_NAME : "demo-deploy"
+  EB_ENVIRONMENT_NAME : "Demo-deploy-env"
+  DEPLOY_PACKAGE_NAME : "demp-deploy-${{ github.sha }}.zip"
+  AWS_REGION_NAME : "us-east-1"
+
+on : 
   push:
-    branches:
+    branches: 
       - main
 
-jobs:
-  testing:
-    runs-on: [ubuntu-latest]
+jobs: 
+
+  ci-pipeline:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Print message from testing job
-        run : echo "Hello World"
+      - name: Git Clone Our Repository
+        uses: actions/checkout@v3
 
-      - name: Execute multiple messages
+      - name: Install Dependencies
+        run : npm ci
+
+      - name: Create Build folder
+        run : npm run build
+  
+      - name: Create Zip Deployment Package
+        run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-region           : ${{ env.AWS_REGION_NAME }}
+
+      - name: Copy our Deployment Package To S3 bucket
+        run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME }}/
+        
+      - name: Print Message On Completion Of CI Pipeline
+        run : echo "CI Pipeline part finished successfully"
+
+
+  cd-pipeline:
+    runs-on: ubuntu-latest
+    needs  : [ci-pipeline]
+
+    steps:
+      - name: Config My AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-region           : ${{ env.AWS_REGION_NAME }}
+
+
+      - name: Create new ElasticBeanstalk Application Version
         run : |
-          echo "Hello msg 1"
-          echo "Hello msg 2"
-          echo "Printing Global Env Varialbe ${{env.DEPLOY_PACKAGE_NAME}}"
+          aws elasticbeanstalk create-application-version \
+          --application-name ${{ env.EB_APPLICATION_NAME }} \
+          --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
+          --version-label "Ver-${{ github.sha }}" \
+          --description "CommitSHA-${{ github.sha }}"
 
-      - name: list current folder
-        run : ls -la
+      - name: Deploy Our New Application Version
+        run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha }}"
         
-      - name: Clone my repo
-        uses: actions/checkout@v1
+      - name: Print Message On Completion Of CD Pipeline
+        run : echo "CD Pipeline part finished successfully"
+  
+          
+# # ----------------------------
+# # Simple git Action Demo
+# # ----------------------------
+
+# name: My-GitHub-Action-tutorial
+# env : 
+#   APPLICATION_NAME : "Drag_And_Drop_App"
+#   DEPLOY_PACKAGE_NAME: "dragDrop-app-ver-${{github.sha}}"
+  
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   testing:
+#     runs-on: [ubuntu-latest]
+
+#     steps:
+#       - name: Print message from testing job
+#         run : echo "Hello World"
+
+#       - name: Execute multiple messages
+#         run : |
+#           echo "Hello msg 1"
+#           echo "Hello msg 2"
+#           echo "Printing Global Env Varialbe ${{env.DEPLOY_PACKAGE_NAME}}"
+
+#       - name: list current folder
+#         run : ls -la
+        
+#       - name: Clone my repo
+#         uses: actions/checkout@v1
       
-      - name: list folder after cloning git repo
-        run : ls -la
+#       - name: list folder after cloning git repo
+#         run : ls -la
         
-  deploy:
-    runs-on: [ubuntu-latest]
-    needs: [testing]
-    env:
-      VAR1 : "this env variables inside the jobs act as a Local env Variables"
-      VAR2 : "Darag and Drop Application"
+#   deploy:
+#     runs-on: [ubuntu-latest]
+#     needs: [testing]
+#     env:
+#       VAR1 : "this env variables inside the jobs act as a Local env Variables"
+#       VAR2 : "Darag and Drop Application"
 
-    steps:
-      - name: Print message from deploy job
-        run: echo "Project Deployed msg"
+#     steps:
+#       - name: Print message from deploy job
+#         run: echo "Project Deployed msg"
 
-      - name: list current folder
-        run : ls -la
+#       - name: list current folder
+#         run : ls -la
 
-      - name: Printing Global env variable
-        run : echo " App Name - ${{env.APPLICATION_NAME}}"
+#       - name: Printing Global env variable
+#         run : echo " App Name - ${{env.APPLICATION_NAME}}"
 
-      - name: Printing Local env variable
-        run : echo " VAR1 = ${{env.VAR1}}"
+#       - name: Printing Local env variable
+#         run : echo " VAR1 = ${{env.VAR1}}"
 
-      - name: Printing Super Local env variable
-        run : echo "this is a super local variable $SUPER_VAR"
-        env : 
-          SUPER_VAR : "Hello I am local variable"
+#       - name: Printing Super Local env variable
+#         run : echo "this is a super local variable $SUPER_VAR"
+#         env : 
+#           SUPER_VAR : "Hello I am local variable"
     
