--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -7,7 +7,7 @@ env :
   EB_PACKAGE_S3_BUCKET_NAME : "demo-deploy"
   EB_APPLICATION_NAME : "demo-deploy"
   EB_ENVIRONMENT_NAME : "Demo-deploy-env"
-  DEPLOY_PACKAGE_NAME : "demp-deploy-${{ github.sha }}.zip"
+  DEPLOY_PACKAGE_NAME : "demo-deploy-${{ github.sha }}.zip"
   AWS_REGION_NAME : "us-east-1"
 
 on : 
